<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/nav_topgroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_myprofile"
            android:title="@string/myprofile" />
        <item
            android:id="@+id/nav_friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_arenarecords"
            android:title="@string/arenarecords" />
        <item
            android:id="@+id/nav_addarena"
            android:title="@string/addarena" />
        <item
            android:id="@+id/nav_yourarenas"
            android:title="@string/yourarenas" />
    </group>

    <group>
        <item
            android:id="@+id/fragment_settings"
            android:title="@string/settings" />
    </group>


</menu>