<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_feed"
        android:enabled="true"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed"
        />
    <item
        android:id="@+id/fragment_myrounds"
        android:enabled="true"
        android:icon="@drawable/ic_roundlist"
        android:title="@string/myrounds"/>
    <item
        android:id="@+id/fragment_addround"
        android:enabled="true"
        android:icon="@drawable/ic_addround"
        android:title="@string/addround"/>
    <item
        android:id="@+id/fragment_myprofile"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/myprofile"/>
</menu>